--- a/[Training] NewBirth Networks.ipynb
+++ b/[Training] NewBirth Networks.ipynb
@@ -13,47 +13,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import print_function\n",
+    "\n",
     "import keras \n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential, Model,load_model\n",
-    "from keras.layers import Input, Dense, Dropout, Flatten, TimeDistributed\n",
-    "from keras.layers import Conv2D, MaxPooling2D, UpSampling2D, Bidirectional, GlobalAveragePooling2D\n",
+    "from keras.layers import Input, Dense, Dropout, Flatten, MaxPooling3D, TimeDistributed, Conv2D, MaxPooling2D, UpSampling2D, Bidirectional, GlobalAveragePooling2D\n",
     "from keras.layers.core import Dense, Dropout, Reshape, Activation\n",
-    "from keras import backend as K\n",
-    "from keras.callbacks import TensorBoard\n",
-    " \n",
-    "from keras.models import Sequential\n",
     "from keras.layers.convolutional import Conv3D\n",
     "from keras.layers.convolutional_recurrent import ConvLSTM2D\n",
     "from keras.layers.normalization import BatchNormalization\n",
-    "import numpy as np\n",
-    "import pylab as plt\n",
+    "\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
     "from skimage import io\n",
-    "from xml.dom import minidom\n",
     "import random \n",
+    "import numpy as np\n",
     "\n",
     "from skimage import measure\n",
-    "from skimage.measure import label, regionprops\n",
-    "import numpy as np\n",
+    "from skimage.measure import label \n",
     "import scipy as sp\n",
     "import scipy.ndimage.morphology"
    ]
@@ -283,7 +268,7 @@
     "print(NN_outputs.shape)\n",
     "'''\n",
     "\n",
-    "Ntrain = x_train.shape[0]-2#len(range(2,x_train.shape[0])) + 1 \n",
+    "Ntrain = x_train.shape[0]-2 \n",
     "\n",
     "NN_inputs = np.zeros([Ntrain, 6, img_size, img_size, 1])  \n",
     "NN_outputs = np.zeros([Ntrain, img_size, img_size, 1])  \n",
@@ -440,25 +425,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'MaxPooling3D' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-4faf897f9485>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     58\u001b[0m                padding='same', data_format='channels_last', name='Layer9'))\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m \u001b[0mseq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaxPooling3D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpool_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrides\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'valid'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'MaxPooling3D' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# buikd graph \n",
+    "# build graph \n",
     " \n",
     "nfeatures = 6\n",
     "seq = Sequential()\n",
@@ -532,11 +505,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "Layer1 (Bidirectional)       (None, 6, None, None, 64) 76288     \n",
+      "_________________________________________________________________\n",
+      "Layer1_normalization (BatchN (None, 6, None, None, 64) 256       \n",
+      "_________________________________________________________________\n",
+      "Layer1_dropout (Dropout)     (None, 6, None, None, 64) 0         \n",
+      "_________________________________________________________________\n",
+      "Layer2 (Bidirectional)       (None, 6, None, None, 80) 299840    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_4 (Batch (None, 6, None, None, 80) 320       \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 6, None, None, 80) 0         \n",
+      "_________________________________________________________________\n",
+      "Layer3 (Bidirectional)       (None, 6, None, None, 80) 345920    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_5 (Batch (None, 6, None, None, 80) 320       \n",
+      "_________________________________________________________________\n",
+      "dropout_5 (Dropout)          (None, 6, None, None, 80) 0         \n",
+      "_________________________________________________________________\n",
+      "Layer4 (Bidirectional)       (None, 6, None, None, 80) 345920    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_6 (Batch (None, 6, None, None, 80) 320       \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 6, None, None, 80) 0         \n",
+      "_________________________________________________________________\n",
+      "Layer5 (Conv3D)              (None, 6, None, None, 256 553216    \n",
+      "_________________________________________________________________\n",
+      "Layer5-dropout (Dropout)     (None, 6, None, None, 256 0         \n",
+      "_________________________________________________________________\n",
+      "Layer8 (Conv3D)              (None, 6, None, None, 64) 442432    \n",
+      "_________________________________________________________________\n",
+      "Layer9 (Conv3D)              (None, 6, None, None, 1)  1729      \n",
+      "_________________________________________________________________\n",
+      "max_pooling3d_1 (MaxPooling3 (None, 0, None, None, 1)  0         \n",
+      "=================================================================\n",
+      "Total params: 2,066,561\n",
+      "Trainable params: 2,065,953\n",
+      "Non-trainable params: 608\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "seq.summary()"
    ]
